tests/stderr-snapshots/integration__integration__pseudo__pseudo_len_ndiv_4.snap
---
source: tests/integration/pseudo.rs
expression: stderr
---
error: number of bytes in blob not divisible by 4
   ┌─ <input>:28:20
   │
28 │         wait(@blob="0f0000");
   │                    ^^^^^^^^ blob literal of length 3


